# ZigInstall

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
dev.348+c564a16a0/doc/: langref.html
ziginstall/: _global.py  _install.py  _linux.py  _tools.py  cli.py
ziginstall/tools/: _linux.py  core.py  install.py
